# raft_cpp

./: CMakeLists.txt  README.md
cmake/: FindGlib.cmake  FindHiredis.cmake  FindMsgpack.cmake
raft-kv/: CMakeLists.txt  raft-kv.cpp
raft-kv/common/: random_device.cpp  random_device.h
raft-kv/raft/: config.cpp  config.h  raft.h  raft_log.cpp  ready.h  unstable.h
raft-kv/server/: raft_node.cpp  raft_node.h
raft-kv/snap/: snapshotter.h
raft-kv/transport/: peer.h
tests/: CMakeLists.txt  test_random.cpp
